--- a/faszienballset.html
+++ b/faszienballset.html
@@ -56,17 +56,16 @@
         </div>
         <div id="container-content">
             <div id="content">
-                    <div class="title-product">FASZIENBALL SET</div>
+                    <div class="title-product">Das Contenance.® Faszien-Ball Set – Für Wohlbefinden, Regeneration und Leistungssteigerung der Muskeln.</div>
                     <div class="container-product container-product-amazon">
                         <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
                         <div class="product-info product-info-amazon">
-                            <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
-                            <div class="bullet-head">&#10004; LINDERT MUSKELSCHMERZEN &amp; VERSPANNUNGEN</div>    
-                            <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Schulter-, Gesäß- und Hüftschmerzen: Diese Faszien-Bälle sind bestens geeignet zur Schmerzpunktebehandlung bei Verspannungen wie dem Lösen unangenehmer Verklebungen im Bindegewebe. Ihre matt-weiche Oberfläche sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht intensivere Anwendungen im Leistungssport und Alltag sowie eine umfangreiche und gesteigerte Intensität der Massage.</div>
-                            <div class="bullet-head">&#10004; FÖRDERT DIE MUSKULATUR</div>    
-                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag oder Therapie.</div>
-                            <div class="bullet-head">&#10004; BEUGT HALTUNGS- &amp; ÜBERLASTUNGSSCHÄDEN VOR</div>    
-                            <div class="bullet-body-last">Kontinuierliche Anwendung führt zur Regulierung von Fehlbelastungen und Vermeidung von Überlastungsschäden beim Training, zudem wirkt es Haltungsschäden und einem Hohlkreuz entgegen.</div>
+                            <div class="bullet-head bullet-head-top">&#10004; LÖST MUSKELSCHMERZEN &amp; VERSPANNUNGEN</div>    
+                            <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Nacken-, Schulter-, Gesäß- und Hüftschmerzen! Ob zur Schmerzpunktebehandlung bei Verspannungen oder dem Lösen unangenehmer Verklebungen im Bindegewebe: Die matt-weiche Oberfläche der Bälle sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht eine umfangreiche und gesteigerte Intensität der Massage.</div>
+                            <div class="bullet-head">&#10004; STEIGERT DIE MUSKULATUR</div>    
+                            <div class="bullet-body">Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag.</div>
+                            <div class="bullet-head">&#10004; WIRKUNGSVOLL &amp; PRAGMATISCH</div>    
+                            <div class="bullet-body-last">Im Unterschied zur Faszien-Rolle, ist mit den 3 einzigartigen Faszienball-Formen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Handlich und klein stehlen sie keinen Platz in der Sporttasche und man kann sie immer und überall benutzen. Dieses optimal abgestimmte Set ist grundsätzlich ideal für jeden geeignet.</div>
                         </div>
                     </div>
                     <div class="container-product container-product-small">
