--- a/yogakorkblock.html
+++ b/yogakorkblock.html
@@ -56,12 +56,11 @@
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">YOGA KORK BLOCK</div>
+                <div class="title-product">Der Contenance.® Yoga Kork Block – Dein treuer und robuster Yoga Begleiter.</div>
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">       
-                        <div class="info-title">Contenance.® Yoga Block aus Naturkork – robust &amp; rutschfest – für Stabilität &amp; Gleichgewicht.</div>
-                        <div class="bullet-head">&#10004; DAS PERFEKTE YOGA ZUBEHÖR</div>    
+                        <div class="bullet-head bullet-head-top">&#10004; DAS PERFEKTE YOGA ZUBEHÖR</div>    
                         <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für das Rückenkreuz, oder als nützliches Hilfsmittel beim Erlernen neuer Asanas oder Pilates Übungen: Der Kork Yoga Block ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
                         <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
                         <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
@@ -80,19 +79,32 @@
                 </div>
                 <div class="container-product container-product-small">
                     <div class="product-info">
-                        <div class="info-container"></div>
-                        <div class="info-title">Nachhaltig &amp; Ökologisch: Genießen Sie das wertvolle Gefühl von Naturkork</div>
-                        <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
+                        <div class="info-title">Die Vorteile von Naturkork:</div>
+                        <div class="bullet-body2">&#10004; Antibakteriell</div>
+                        <div class="bullet-body2">&#10004; Antiallergisch</div>
+                        <div class="bullet-body2">&#10004; Robust</div>
+                        <div class="bullet-body2">&#10004; Rutschfest</div>
+                        <div class="bullet-body2">&#10004; Geruchsfreundlich</div>
+                        <div class="bullet-body2">&#10004; Leichte Reinigung</div>
+                        <div class="bullet-body2">&#10004; Langlebige Beständigkeit</div>
                     </div>
                     <img class="image-product image-product-small-right" src="./media/cork.jpg" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-small">
-                        <img class="image-product image-product-small" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
+                    <img class="image-product image-product-small" src="./media/nachhaltig.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-right">
+                        <div class="info-container"></div>
+                        <div class="info-title">Nachhaltig &amp; Ökologisch: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                        <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
+                    </div>
+                </div>
+                <div class="container-product container-product-small">
+                    <div class="product-info">
                         <div class="info-container"></div>
                         <div class="info-title">Von besonderer Qualität</div>
                         <div class="info-text">Dank professioneller deutscher Produktentwicklung und hoher Qualitätsstandards ist das Kork-Yoga Set ein absoluter Spitzenreiter in Sachen Hochwertigkeit, Gesundheit und Umweltbewusstsein. Ein sehr aufwendiges Verfahren der Korkstoffgewinnung und eine maßgetreue Formgebung mit Hochdruckpresse und Schleifwerk, bringen ein besonders hautfreundliches und nachhaltiges Produkt hervor – ausgestattet mit selbst-reinigenden Eigenschaften und einer langen Haltbarkeitsdauer.</div>
                     </div>
+                    <img class="image-product image-product-small-right" id="image-sicherheit" src="./media/logo9.png" alt="Italian Trulli">
                 </div>
                 <div class="container-product container-product-amazon">
                         <div class="product-info product-info-amazon">
