--- a/kontakt.html
+++ b/kontakt.html
@@ -64,11 +64,11 @@
                         <div class="line">Wir nehmen Bezug auf unsere <a id="link-datenschutz" href="./datenschutz.html">Datenschutzerklärung</a>.</div>
                     </div>
                     <div class="contact-form">
-                        <div class="line-input">Dein Name:</div>
+                        <div class="line-input">Name:</div>
                         <input type="text" class="input-kontakt">
                         <div class="line-input">Email:</div>
                         <input type="email" class="input-kontakt">
-                        <div class="line-input">Telefonnummer:</div>
+                        <div class="line-input">Telefonnummer (optional):</div>
                         <input type="tel" class="input-kontakt">
                         <div class="line-input">Nachricht:</div>
                         <textarea class="input-kontakt-message"></textarea>
