--- a/faszienballset.html
+++ b/faszienballset.html
@@ -64,7 +64,7 @@
                             <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Nacken-, Schulter-, Gesäß- und Hüftschmerzen! Ob zur Schmerzpunktebehandlung bei Verspannungen oder dem Lösen unangenehmer Verklebungen im Bindegewebe: Die matt-weiche Oberfläche der Bälle sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht eine umfangreiche und gesteigerte Intensität der Massage.</div>
                             <div class="bullet-head">&#10004; STEIGERT DIE MUSKULATUR</div>    
                             <div class="bullet-body">Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag.</div>
-                            <div class="bullet-head">&#10004; WIRKUNGSVOLL &amp; PRAGMATISCH</div>    
+                            <div class="bullet-head">&#10004; GEZIELT EINSETZBAR</div>    
                             <div class="bullet-body-last">Im Unterschied zur Faszien-Rolle, ist mit den 3 einzigartigen Faszienball-Formen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Handlich und klein stehlen sie keinen Platz in der Sporttasche und man kann sie immer und überall benutzen. Dieses optimal abgestimmte Set ist grundsätzlich ideal für jeden geeignet.</div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <div class="product-info product-info-amazon">
                             <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
                                 <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen!</div>
+                                <div class="buy-amazon">Jetzt hier bestellen!</div>
                             </a>
                         </div>
                     </div>
