--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -107,7 +107,7 @@
                             <div class="product-info product-info-amazon">
                                     <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
                                         <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                        <div class="buy-amazon">Jetzt Kaufen</div>
+                                        <div class="buy-amazon">Jetzt hier bestellen!</div>
                                     </a>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                     <div class="product-info product-info-amazon">
                             <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
                                 <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen!</div>
+                                <div class="buy-amazon">Jetzt hier bestellen!</div>
                             </a>
                     </div>
                 </div>
