--- a/faszienballset.html
+++ b/faszienballset.html
@@ -62,10 +62,10 @@
                         <div class="product-info product-info-amazon">
                             <div class="bullet-head bullet-head-top">&#10004; LÖST MUSKELSCHMERZEN &amp; VERSPANNUNGEN</div>    
                             <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Nacken-, Schulter-, Gesäß- und Hüftschmerzen! Ob zur Schmerzpunktebehandlung bei Verspannungen oder dem Lösen unangenehmer Verklebungen im Bindegewebe: Die matt-weiche Oberfläche der Bälle sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht eine umfangreiche und gesteigerte Intensität der Massage.</div>
-                            <div class="bullet-head">&#10004; STEIGERT DIE MUSKULATUR</div>    
+                            <div class="bullet-head">&#10004; STEIGERT LEISTUNG UND REGENERATION DER MUSKELN</div>    
                             <div class="bullet-body">Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag.</div>
-                            <div class="bullet-head">&#10004; GEZIELT EINSETZBAR</div>    
-                            <div class="bullet-body-last">Im Unterschied zur Faszien-Rolle, ist mit den 3 einzigartigen Faszienball-Formen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Handlich und klein stehlen sie keinen Platz in der Sporttasche und man kann sie immer und überall benutzen. Dieses optimal abgestimmte Set ist grundsätzlich ideal für jeden geeignet.</div>
+                            <div class="bullet-head">&#10004; REGT DIE DURCHBLUTUNG AN</div>    
+                            <div class="bullet-body-last">Im Unterschied zur Faszien-Rolle, ist mit den 3 einzigartigen Faszienball-Formen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
                         </div>
                     </div>
                     <div class="container-product container-product-small">
