--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -56,7 +56,7 @@
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">Das Contenance.® Faszien Yoga Set – Für eine komfortablere und intensivere Praxis.</div>
+                <div class="title-product">Das Contenance.® Faszienball Set – Für Wohlbefinden, Regeneration und Leistungssteigerung der Muskeln.</div>
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
