--- a/intern.html
+++ b/intern.html
@@ -8,17 +8,18 @@
             <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
-            <title>Contenance.</title>
+            <title>KONTAKT | Contenance.</title>
             <link href="style.css" rel="stylesheet" />
+            <link href="impressum.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-            <script src="script.js"></script>
+            <script src="script.js"></script>           
     </head>
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./contenance.html">CONTENANCE.</a> 
+            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
                 <a class="link link-mobile" href="./faszienyogaset.html">FASZIEN YOGA SET</a>
@@ -53,10 +54,12 @@
                 </div>
             </div>
         </div>
-            <div class="container-full">
-                <img id="image-home" src="./media/banner_2.png" alt="Italian Trulli">
-               <!-- <div id="slogan">LIFT YOUR VIBE.</div> -->
+        <div id="container-content">
+            <div id="content">
+                <div class="page-title" id="page-title-kontakt">INTERN | MESSAGES</div>
+                
             </div>
+        </div>
         <div id = "footer-container">
             <div id = "footer">
                 <div class="footer-colomn">
@@ -65,7 +68,7 @@
                 </div>
                 <div class="footer-colomn">
                     <div class="footer-title">INFO</div>
-                    <a href="./kontakt.html" class="link link-footer">Kontakt</a>
+                     <a href="./kontakt.html" class="link link-footer">Kontakt</a>
                     <a href="./agbs.html" class="link link-footer">AGB's</a>
                     <a href= "./impressum.html" class="link link-footer">Impressum</a>
                     <a href="./datenschutz.html" class="link link-footer">Datenschutzerklärung</a>
