--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-            <script src="script.js"></script>
+            <script src="script.js"></script>           
     </head>
     <body>
         <div class="opacitylayer"></div>
@@ -65,13 +65,13 @@
                     </div>
                     <div class="contact-form">
                         <div class="line-input">Name:</div>
-                        <input type="text" class="input-kontakt">
+                        <input id = "iname" type="text" class="input-kontakt">
                         <div class="line-input">Email:</div>
-                        <input type="email" class="input-kontakt">
+                        <input id = "imail" type="email" class="input-kontakt">
                         <div class="line-input">Telefonnummer (optional):</div>
-                        <input type="tel" class="input-kontakt">
+                        <input id = "inumber" type="tel" class="input-kontakt">
                         <div class="line-input">Nachricht:</div>
-                        <textarea class="input-kontakt-message"></textarea>
+                        <textarea id = "itext" class="input-kontakt-message"></textarea>
                         <div id="kontakt-send">SENDEN</div>
                     </div>
                 </div>
