--- a/yogakorkblock.html
+++ b/yogakorkblock.html
@@ -60,12 +60,12 @@
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">       
-                        <div class="bullet-head bullet-head-top">&#10004; DAS PERFEKTE YOGA ZUBEHÖR</div>    
+                        <div class="bullet-head bullet-head-top">&#10004; FÜR EINE STABILE &amp; SICHERE PRAXIS</div>    
                         <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für das Rückenkreuz, oder als nützliches Hilfsmittel beim Erlernen neuer Asanas oder Pilates Übungen: Der Kork Yoga Block ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
-                        <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
-                        <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
-                        <div class="bullet-head">&#10004; ROBUST &amp; RUTSCHFEST</div>    
-                        <div class="bullet-body-last">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</div>
+                        <div class="bullet-head">&#10004; 100% ROBUST &amp; RUTSCHFEST</div>    
+                        <div class="bullet-body">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für immer festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich.</div>
+                        <div class="bullet-head">&#10004; ANTIBAKTERIELL &amp; ANTIALLERGISCH</div>    
+                        <div class="bullet-body-last">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen den Kork Block zu einem beliebten Trainingsbegleiter in vielen Gyms und Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
