--- a/faszienballset.html
+++ b/faszienballset.html
@@ -64,7 +64,7 @@
                             <div class="bullet-body">Ein wunderbares Mittel gegen Rücken-, Nacken-, Schulter-, Gesäß- und Hüftschmerzen! Ob zur Schmerzpunktebehandlung bei Verspannungen oder dem Lösen unangenehmer Verklebungen im Bindegewebe: Die matt-weiche Oberfläche der Bälle sorgt für mehr Haftung auf der Haut und ihr spezieller Härtegrad in der Tiefe ermöglicht eine umfangreiche und gesteigerte Intensität der Massage.</div>
                             <div class="bullet-head">&#10004; STEIGERT LEISTUNG UND REGENERATION DER MUSKELN</div>    
                             <div class="bullet-body">Regelmäßige Übungen tragen zu einer spürbaren Steigerung und Erhaltung von Elastizität und Leistungsvermögen der Muskulatur bei sowie einer aktiven und gezielten Regeneration der Muskeln. Perfekt zum Auf- und Abwärmen beim Sport oder auch zur wohltuenden Entspannung im Alltag.</div>
-                            <div class="bullet-head">&#10004; REGT DIE DURCHBLUTUNG AN</div>    
+                            <div class="bullet-head">&#10004; REGT STOFFWECHSEL &amp; DURCHBLUTUNG AN/div>    
                             <div class="bullet-body-last">Im Unterschied zur Faszien-Rolle, ist mit den 3 einzigartigen Faszienball-Formen eine noch gezieltere Behandlung in den einzelnen Körpersegmenten möglich. Durch gezielte Stimulation der Gewebestrukturen wird die Durchblutung angeregt sowie die Nährstoffverteilung innerhalb des Gewebes gefördert.</div>
                         </div>
                     </div>
