--- a/faszienyogaset.html
+++ b/faszienyogaset.html
@@ -56,16 +56,16 @@
         </div>
         <div id="container-content">
             <div id="content">
-                <div class="title-product">Das Contenance.® Faszienball Set – Für Wohlbefinden, Regeneration und Leistungssteigerung der Muskeln.</div>
+                <div class="title-product">Das Contenance.® Faszien Yoga Set – für eine komfortablere und intensivere Praxis.</div>
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset2.jpg" alt="Italian Trulli">
                     <div class="product-info product-info-amazon">        
-                            <div class="bullet-head bullet-head-top">&#10004; OPTIMALE SET-KOMBINATION</div>    
-                            <div class="bullet-body">Ob als Stütze bei Balance-Übungen, als Unterlage für den Rücken, zum Ausrollen der Muskelfaszien oder als nützliches Hilfsmittel beim Erlernen neuer Yoga Übungen: Dieses optimal abgestimmte Set ist grundsätzlich das ideale Yoga-Zubehör für jeden Beginner und Fortgeschrittenen.</div>
-                            <div class="bullet-head">&#10004; IN GYMS &amp; STUDIOS BELIEBT</div>    
-                            <div class="bullet-body">Der angenehme Geruch des Korks aufgrund seiner antibakteriellen und antiallergischen Eigenschaften, und die langlebige Beständigkeit des Materials, machen das Kork-Yoga Set zu einem beliebten Trainingsbegleiter in vielen Gyms &amp; Studios. Da Kork ein natürlicher Wachstums Hemmer für Bakterien, Pilz und Schimmel ist, bleibt die Reinigung des Materials nur ein minimaler Aufwand!</div>
-                            <div class="bullet-head">&#10004; ROBUST &amp; RUTSCHFEST</div>    
-                            <div class="bullet-body-last">Kork enthält eine natürliche wachsartige Substanz, die kein Wasser oder Gas absorbiert, und damit sowohl seine Verrottung verhindert, als auch bei Feuchtigkeit für festen Grip sorgt. Wenn Kork warm oder feucht wird, nehmen seine taktilen Eigenschaften zu. Genießen Sie das wertvolle Gefühl von Naturkork: Latex-frei, Plastik-frei und 100% natürlich!</div>
+                            <div class="bullet-head bullet-head-top">&#10004; STEIGERT ATMUNG &amp; KONZENTRATION</div>    
+                            <div class="bullet-body">Durch tiefes und gezieltes Atmen während der Übungen, wird die Sauerstoffzufuhr zum Gehirn erhöht und das Lungenvolumen erweitert, was Erkrankungen der Atemwege vorbeugt und dein Gehirn produktiver arbeiten lässt. Als Treibstoff für die Zellen, unterstützt Sauerstoff die Funktionsweise des gesamten Körpers, reinigt die Organe und verschafft dir einen klaren Kopf.</div>
+                            <div class="bullet-head">&#10004; STÄRKT  HERZ &amp; IMMUNSYSTEMT</div>    
+                            <div class="bullet-body">Yoga bewirkt nicht nur, dass die Zellen mehr Sauerstoff bekommen, sondern hilft dem Blut auch schneller durch die Gefäße zu gelangen, was einen sehr positiven Einfluss auf die kardiovaskuläre Gesundheit hat, denn das Herz-Kreislauf-System wird dabei moderat und gleichmäßig belastet und der Cortisol-Spiegel im Gleichgewicht gehalten, was eine effektive Rolle bei der Stärkung der Immunität spielt.</div>
+                            <div class="bullet-head">&#10004; TRÄGT ZU EINER GESUNDEN KÖRPERHALTUNG BEI</div>    
+                            <div class="bullet-body-last">Fehlbelastungen regulieren und Haltungsstörungen wie Hohlkreuz überwinden: Die natürliche Haltung der Wirbelsäule ermöglicht dir eine aufrechte Körperhaltung und somit eine korrekte Ausführung der Übungen, denn die Bauchatmung hilft dir Gleichgewicht und Körperspannung zu bewahren.</div>
                     </div>
                 </div>
                 <div class="container-product container-product-small">
