--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
         </div>
             <div class="container-full">
-                <img id="image-home" src="./media/banner_2.png" alt="Italian Trulli">
-               <!-- <div id="slogan">LIFT YOUR VIBE.</div> -->
+                <img id="image-home" src="./media/banner_3.png" alt="Italian Trulli">
+                <div id="slogan">LIFT UP LIFE.</div> 
             </div>
         <div id = "footer-container">
             <div id = "footer">
