--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
             <div class="container-full">
-                <img id="image-home" src="./media/banner_3.png" alt="Italian Trulli">
+                <img id="image-home" src="./media/banner_4.jpg" alt="Italian Trulli">
                 <div id="slogan">LIFT UP LIFE.</div> 
             </div>
         <div id = "footer-container">
