--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="/style.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="/sricpt.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+        
         <title>Spenden beim Amazon-Kauf</title>
     </head>
     <body>
         <h1>Spenden beim Amazon-Kauf</h1>
+        <div>
+          <p>Wozu soll ihre Spende benutzt werden?</p>
+          <input type="radio" id="kinder" name="destination" value="kinder">
+          <label for="kinder">Kinder</label><br>
+          <input type="radio" id="tiere" name="destination" value="tiere">
+          <label for="tiere">Tiere</label><br>
+          <input type="radio" id="natur" name="destination" value="natur">
+          <label for="natur">Natur</label><br><br>
+          <p>Amazon-Link einfügen</p>
+          <input id="amazon-link" type="text"><br><br>
+          <button id="buttonGo">Neuen Link erzeugen</button>
+          <br><br>
+          <div id="linkBox">
+          </div>
+        </div>
     </body>
 </html>
