--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <script src="/sricpt.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
         
-        <title class="center">Spenden beim Amazon-Kauf</title>
+        <title>Spenden beim Amazon-Kauf</title>
     </head>
     <body>
-        <h1>Spenden beim Amazon-Kauf</h1>
+        <h1 class="center">Spenden beim Amazon-Kauf</h1>
         <div class="center">
           <p>Wozu soll ihre Spende benutzt werden?</p>
           <input type="radio" id="kinder" name="destination" value="kinder">
